--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,8 @@ hs_err_pid*
 ## Maven
 ##############################
 target/
+*/target/*
+*/target/**
 pom.xml.tag
 pom.xml.releaseBackup
 pom.xml.versionsBackup
@@ -143,3 +145,4 @@ nb-configuration.xml
 ## OS X
 ##############################
 .DS_Store
+/target/
