--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
             <artifactId>lwjgl</artifactId>
             <version>2.9.3</version>
         </dependency>
-
+        <!-- https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl_util -->
+        <dependency>
+            <groupId>org.lwjgl.lwjgl</groupId>
+            <artifactId>lwjgl_util</artifactId>
+            <version>2.9.3</version>
+        </dependency>
     </dependencies>
 
     
