--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,23 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-        <!-- Lwjgl -->
+        <!-- Lightweight Java Game Library -->
         <dependency>
             <groupId>org.lwjgl.lwjgl</groupId>
             <artifactId>lwjgl</artifactId>
             <version>2.9.3</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.lwjgl.lwjgl/lwjgl_util -->
         <dependency>
             <groupId>org.lwjgl.lwjgl</groupId>
             <artifactId>lwjgl_util</artifactId>
             <version>2.9.3</version>
         </dependency>
+        <!-- Other Libraries -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.12</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
-
-    
 </project>
